[package]
name = "s2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
nom = "7.1.3"
petgraph = "0.6.4"
rayon = "1.8.0"
rstest = "0.18.2"

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"
